RESOLVED FIXED 211537
Context Menus presented from the wrong location when presented from sub-frames
https://bugs.webkit.org/show_bug.cgi?id=211537
Summary Context Menus presented from the wrong location when presented from sub-frames
Megan Gardner
Reported 2020-05-06 16:07:23 PDT
Context Menus presented from the wrong location when presented from sub-frames
Attachments
Patch (3.21 KB, patch)
2020-05-06 16:12 PDT, Megan Gardner
no flags
Megan Gardner
Comment 1 2020-05-06 16:12:14 PDT
Megan Gardner
Comment 2 2020-05-06 16:16:01 PDT
EWS
Comment 3 2020-05-06 23:18:57 PDT
Committed r261269: <https://trac.webkit.org/changeset/261269> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398679 [details].
Note You need to log in before you can comment on or make changes to this bug.